--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
-player1=demoplayer
-player2=nullplayer
-map=Basic1
+player1=myplayer
+player2=myplayer_v18
+map=FastPaced
 seed=42
 replayName=%TIMESTAMP%-%PLAYER1%-vs-%PLAYER2%-on-%MAP%
